code left 2